[gd_scene load_steps=9 format=2]

[ext_resource path="res://Global/assets/images/backgrounds/photos_2021_1_21_fst_creased-tissue-paper.jpg" type="Texture" id=1]
[ext_resource path="res://Global/assets/images/Testress2.png" type="Texture" id=2]
[ext_resource path="res://Obstacle/Scenes/Fix/ObstaclesTilesMap.tres" type="TileSet" id=3]
[ext_resource path="res://Menus/Scenes/PiecesDecoration.gd" type="Script" id=4]
[ext_resource path="res://Menus/Scenes/LevelSelection.gd" type="Script" id=5]
[ext_resource path="res://Global/assets/fonts/Helvetica-Font/Helvetica.tres" type="DynamicFont" id=6]

[sub_resource type="InputEventAction" id=1]
action = "reset"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pieces" type="Node" parent="."]
script = ExtResource( 4 )
falling_speed = 150

[node name="StartPosition" type="Position2D" parent="Pieces"]
position = Vector2( 42, -126 )

[node name="RespawnTimer" type="Timer" parent="Pieces"]
wait_time = 0.5
one_shot = true

[node name="Pieces2" type="Node" parent="."]
script = ExtResource( 4 )
falling_speed = 150

[node name="StartPosition" type="Position2D" parent="Pieces2"]
position = Vector2( 438, -126 )

[node name="RespawnTimer" type="Timer" parent="Pieces2"]
wait_time = 0.5
one_shot = true

[node name="Control" type="CanvasLayer" parent="."]
layer = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
margin_left = -3.0
margin_top = 135.0
margin_right = 489.0
margin_bottom = 648.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/ScrollContainer"]
margin_right = 480.0
rect_min_size = Vector2( 480, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer/CenterContainer"]
margin_left = 240.0
margin_right = 240.0
rect_pivot_offset = Vector2( -6, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="Control"]
position = Vector2( 6, 0 )
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 36, 36 )
cell_custom_transform = Transform2D( 9, 0, 0, 9, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 851976, 0, 262144, 851977, 0, 3, 851978, 0, 3, 851979, 0, 3, 851980, 0, 3, 851981, 0, 3, 851982, 0, 3, 851983, 0, 3, 851984, 0, 3, 851985, 0, 3, 851986, 0, 3, 851987, 0, 3, 851988, 0, 3, 851989, 0, 3, 851990, 0, 3, 851991, 0, 3, 851992, 0, 3, 851993, 0, 3, 851994, 0, 3, 851995, 0, 3, 851996, 0, 3, 851997, 0, 3, 851998, 0, 3, 851999, 0, 3, 852000, 0, 3, 852001, 0, 3, 852002, 0, 3, 852003, 0, 3, 852004, 0, 3, 852005, 0, 3, 852006, 0, 3, 852007, 0, 3, 852008, 0, 3, 852009, 0, 3, 852010, 0, 3, 852011, 0, 262145, 917512, 0, 1, 917513, 0, 262147, 917514, 0, 65539, 917515, 0, 131073, 917516, 0, 131073, 917517, 0, 131073, 917518, 0, 131073, 917519, 0, 131073, 917520, 0, 131073, 917521, 0, 131073, 917522, 0, 131073, 917523, 0, 131073, 917524, 0, 131073, 917525, 0, 131073, 917526, 0, 131073, 917527, 0, 131073, 917528, 0, 131073, 917529, 0, 131073, 917530, 0, 131073, 917531, 0, 131073, 917532, 0, 131073, 917533, 0, 131073, 917534, 0, 131073, 917535, 0, 131073, 917536, 0, 131073, 917537, 0, 131073, 917538, 0, 131073, 917539, 0, 131073, 917540, 0, 131073, 917541, 0, 131073, 917542, 0, 131073, 917543, 0, 131073, 917544, 0, 131073, 917545, 0, 131074, 917546, 0, 262147, 917547, 0, 131075, 983048, 0, 1, 983049, 0, 65539, 983050, 0, 327681, 983081, 0, 327680, 983082, 0, 131074, 983083, 0, 131075, 1048584, 0, 1, 1048585, 0, 131075, 1048618, 0, 1, 1048619, 0, 131075, 1114120, 0, 1, 1114121, 0, 131075, 1114154, 0, 1, 1114155, 0, 131075, 1179656, 0, 1, 1179657, 0, 131075, 1179690, 0, 1, 1179691, 0, 131075, 1245192, 0, 1, 1245193, 0, 131075, 1245226, 0, 1, 1245227, 0, 131075, 1310728, 0, 1, 1310729, 0, 131075, 1310762, 0, 1, 1310763, 0, 131075, 1376264, 0, 1, 1376265, 0, 131075, 1376298, 0, 1, 1376299, 0, 131075, 1441800, 0, 1, 1441801, 0, 131075, 1441834, 0, 1, 1441835, 0, 131075, 1507336, 0, 1, 1507337, 0, 131075, 1507370, 0, 1, 1507371, 0, 131075, 1572872, 0, 1, 1572873, 0, 131075, 1572906, 0, 1, 1572907, 0, 131075, 1638408, 0, 1, 1638409, 0, 131075, 1638442, 0, 1, 1638443, 0, 131075, 1703944, 0, 1, 1703945, 0, 131075, 1703978, 0, 1, 1703979, 0, 131075, 1769480, 0, 1, 1769481, 0, 131075, 1769514, 0, 1, 1769515, 0, 131075, 1835016, 0, 1, 1835017, 0, 131075, 1835050, 0, 1, 1835051, 0, 131075, 1900552, 0, 1, 1900553, 0, 131075, 1900586, 0, 1, 1900587, 0, 131075, 1966088, 0, 1, 1966089, 0, 131075, 1966122, 0, 1, 1966123, 0, 131075, 2031624, 0, 1, 2031625, 0, 131075, 2031658, 0, 1, 2031659, 0, 131075, 2097160, 0, 1, 2097161, 0, 131075, 2097194, 0, 1, 2097195, 0, 131075, 2162696, 0, 1, 2162697, 0, 131075, 2162730, 0, 1, 2162731, 0, 131075, 2228232, 0, 1, 2228233, 0, 131075, 2228266, 0, 1, 2228267, 0, 131075, 2293768, 0, 1, 2293769, 0, 131075, 2293802, 0, 1, 2293803, 0, 131075, 2359304, 0, 1, 2359305, 0, 131075, 2359338, 0, 1, 2359339, 0, 131075, 2424840, 0, 1, 2424841, 0, 131075, 2424874, 0, 1, 2424875, 0, 131075, 2490376, 0, 1, 2490377, 0, 131075, 2490410, 0, 1, 2490411, 0, 131075, 2555912, 0, 1, 2555913, 0, 131075, 2555946, 0, 1, 2555947, 0, 131075, 2621448, 0, 1, 2621449, 0, 131075, 2621482, 0, 1, 2621483, 0, 131075, 2686984, 0, 1, 2686985, 0, 131075, 2687018, 0, 1, 2687019, 0, 131075, 2752520, 0, 1, 2752521, 0, 131075, 2752554, 0, 1, 2752555, 0, 131075, 2818056, 0, 1, 2818057, 0, 131075, 2818090, 0, 1, 2818091, 0, 131075, 2883592, 0, 1, 2883593, 0, 131075, 2883626, 0, 1, 2883627, 0, 131075, 2949128, 0, 1, 2949129, 0, 131075, 2949162, 0, 1, 2949163, 0, 131075, 3014664, 0, 1, 3014665, 0, 131075, 3014698, 0, 1, 3014699, 0, 131075, 3080200, 0, 1, 3080201, 0, 131075, 3080234, 0, 1, 3080235, 0, 131075, 3145736, 0, 1, 3145737, 0, 131075, 3145770, 0, 1, 3145771, 0, 131075, 3211272, 0, 1, 3211273, 0, 131075, 3211306, 0, 1, 3211307, 0, 131075, 3276808, 0, 1, 3276809, 0, 131075, 3276842, 0, 1, 3276843, 0, 131075, 3342344, 0, 1, 3342345, 0, 131075, 3342378, 0, 1, 3342379, 0, 131075, 3407880, 0, 1, 3407881, 0, 131075, 3407914, 0, 1, 3407915, 0, 131075, 3473416, 0, 1, 3473417, 0, 131075, 3473450, 0, 1, 3473451, 0, 131075, 3538952, 0, 1, 3538953, 0, 131075, 3538986, 0, 1, 3538987, 0, 131075, 3604488, 0, 1, 3604489, 0, 131075, 3604522, 0, 1, 3604523, 0, 131075, 3670024, 0, 1, 3670025, 0, 131075, 3670058, 0, 1, 3670059, 0, 131075, 3735560, 0, 1, 3735561, 0, 131075, 3735594, 0, 1, 3735595, 0, 131075, 3801096, 0, 1, 3801097, 0, 131075, 3801130, 0, 1, 3801131, 0, 131075, 3866632, 0, 1, 3866633, 0, 131075, 3866666, 0, 1, 3866667, 0, 131075, 3932168, 0, 1, 3932169, 0, 131075, 3932202, 0, 1, 3932203, 0, 131075, 3997704, 0, 1, 3997705, 0, 131075, 3997738, 0, 1, 3997739, 0, 131075, 4063240, 0, 1, 4063241, 0, 131075, 4063274, 0, 1, 4063275, 0, 131075, 4128776, 0, 1, 4128777, 0, 131075, 4128810, 0, 1, 4128811, 0, 131075, 4194312, 0, 1, 4194313, 0, 131075, 4194346, 0, 1, 4194347, 0, 131075, 4259848, 0, 1, 4259849, 0, 131075, 4259882, 0, 1, 4259883, 0, 131075, 4325384, 0, 1, 4325385, 0, 131075, 4325418, 0, 1, 4325419, 0, 131075, 4390920, 0, 1, 4390921, 0, 131075, 4390954, 0, 1, 4390955, 0, 131075, 4456456, 0, 1, 4456457, 0, 131075, 4456490, 0, 1, 4456491, 0, 131075, 4521992, 0, 1, 4521993, 0, 131075, 4522026, 0, 1, 4522027, 0, 131075, 4587528, 0, 1, 4587529, 0, 131075, 4587562, 0, 1, 4587563, 0, 131075, 4653064, 0, 1, 4653065, 0, 2, 4653066, 0, 262145, 4653097, 0, 262144, 4653098, 0, 65537, 4653099, 0, 131075, 4718600, 0, 1, 4718601, 0, 262147, 4718602, 0, 2, 4718603, 0, 3, 4718604, 0, 3, 4718605, 0, 3, 4718606, 0, 3, 4718607, 0, 3, 4718608, 0, 3, 4718609, 0, 3, 4718610, 0, 3, 4718611, 0, 3, 4718612, 0, 3, 4718613, 0, 3, 4718614, 0, 3, 4718615, 0, 3, 4718616, 0, 3, 4718617, 0, 3, 4718618, 0, 3, 4718619, 0, 3, 4718620, 0, 3, 4718621, 0, 3, 4718622, 0, 3, 4718623, 0, 3, 4718624, 0, 3, 4718625, 0, 3, 4718626, 0, 3, 4718627, 0, 3, 4718628, 0, 3, 4718629, 0, 3, 4718630, 0, 3, 4718631, 0, 3, 4718632, 0, 3, 4718633, 0, 65537, 4718634, 0, 262147, 4718635, 0, 131075, 4784136, 0, 327680, 4784137, 0, 131073, 4784138, 0, 131073, 4784139, 0, 131073, 4784140, 0, 131073, 4784141, 0, 131073, 4784142, 0, 131073, 4784143, 0, 131073, 4784144, 0, 131073, 4784145, 0, 131073, 4784146, 0, 131073, 4784147, 0, 131073, 4784148, 0, 131073, 4784149, 0, 131073, 4784150, 0, 131073, 4784151, 0, 131073, 4784152, 0, 131073, 4784153, 0, 131073, 4784154, 0, 131073, 4784155, 0, 131073, 4784156, 0, 131073, 4784157, 0, 131073, 4784158, 0, 131073, 4784159, 0, 131073, 4784160, 0, 131073, 4784161, 0, 131073, 4784162, 0, 131073, 4784163, 0, 131073, 4784164, 0, 131073, 4784165, 0, 131073, 4784166, 0, 131073, 4784167, 0, 131073, 4784168, 0, 131073, 4784169, 0, 131073, 4784170, 0, 131073, 4784171, 0, 327681 )

[node name="Testress" type="Sprite" parent="."]
position = Vector2( 240, 54 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 2 )

[node name="SettingsButton" type="Button" parent="."]
margin_left = 204.0
margin_top = 675.0
margin_right = 276.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 6 )
shortcut = SubResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Pieces/RespawnTimer" to="Pieces" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="Pieces2/RespawnTimer" to="Pieces2" method="_on_RespawnTimer_timeout"]
[connection signal="pressed" from="SettingsButton" to="." method="open_settings"]
